--- a/package.json
+++ b/package.json
@@ -37,6 +37,16 @@
     "eslint-plugin-react": "7.28.0"
   },
   "dependencies": {
-    "node-fetch": "^3.1.0"
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.2",
+    "html-urls": "^2.4.27",
+    "https": "^1.0.0",
+    "i": "^0.3.7",
+    "js": "^0.1.0",
+    "node-fetch": "^3.1.0",
+    "path": "^0.12.7",
+    "puppeteer": "^13.0.1",
+    "puppeteer-core": "^13.0.1"
   }
 }
