--- a/package.json
+++ b/package.json
@@ -7,46 +7,42 @@
   "author": "Alex <alexandra.rieux@gmx.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.5",
-    "@next/eslint-plugin-next": "^12.0.7",
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
+    "@babel/eslint-parser": "^7.17.0",
+    "@next/eslint-plugin-next": "^12.1.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "@upleveled/eslint-config-upleveled": "2.1.9",
-    "@upleveled/eslint-plugin-upleveled": "^2.0.1",
-    "eslint": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "@upleveled/eslint-config-upleveled": "2.4.9",
+    "@upleveled/eslint-plugin-upleveled": "^2.1.2",
+    "eslint": "^8.9.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "^5.0.1",
-    "eslint-plugin-unicorn": "^40.0.0",
-    "typescript": "^4.5.4"
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "<1",
+    "eslint-plugin-testing-library": "^5.0.5",
+    "eslint-plugin-unicorn": "^41.0.0",
+    "typescript": "^4.5.5"
   },
   "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-react": "7.28.0"
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-jest": "26.1.1"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
-    "express": "^4.17.2",
-    "html-urls": "^2.4.27",
-    "https": "^1.0.0",
-    "i": "^0.3.7",
-    "js": "^0.1.0",
     "node-fetch": "^3.1.0",
-    "path": "^0.12.7",
-    "puppeteer": "^13.0.1",
-    "puppeteer-core": "^13.0.1"
+    "puppeteer": "^13.0.1"
   }
 }
